# hypomnemata

./: .gitignore  AGENTS.md  CLAUDE.md  PLAN-completo.md  PLANO.md  PLANO_OTIMIZACAO_VIDEO.md  README.md  descricao_hypomnemata.txt
backend/: pyproject.toml
backend/hypomnemata/: article.py  backup.py  config.py  crud.py  db.py  llm.py  main.py  models.py  ocr.py  ollama.py  playwright_scraper.py  schemas.py  storage.py  thumbgen.py  ytdlp.py
backend/hypomnemata/routes/: assets.py  captures.py  folders.py  items.py  search.py  storage_info.py  system.py  tags.py
backend/tests/: conftest.py  test_assets.py  test_captures.py  test_items.py  test_ocr.py  test_playwright.py  test_search.py  test_ytdlp.py
design/: Hypomnemata Wireframe.html
extension/: manifest.config.ts  package-lock.json  package.json  tsconfig.json
extension/src/: background.ts
extension/src/lib/: client.ts
extension/src/popup/: index.html  popup.tsx
native/: Package.resolved  Package.swift  README.md
native/Sources/HypomnemataAI/: ItemAIService.swift  ItemChatService.swift  JobAutomation.swift  OpenAICompatibleClient.swift
native/Sources/HypomnemataBackup/: BackupService.swift
native/Sources/HypomnemataCore/: AppPaths.swift  ClockTimestamp.swift  KindInference.swift  LinkParser.swift  Models.swift  UUIDV7.swift
native/Sources/HypomnemataData/: DataErrors.swift  DatabaseSchema.swift  DependencyDoctor.swift  ItemRepository.swift  (+4 more)
webapp/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
webapp/src/: App.tsx  index.css
(+31 files in other folders)
